--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,62 +1,35 @@
-#image:
-#  name: gcr.io/kaniko-project/executor:debug
-#  entrypoint: [ "" ]
-
-image: docker:latest
-
-services:
-  - docker:dind
+image:
+  name: gcr.io/kaniko-project/executor:debug
+  entrypoint: [ "" ]
 
 stages:
   - build
   - release
 
-#before_script:
-#  - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$(echo -n ${DOCKER_HUB_USERNAME}:${DOCKER_HUB_KEY} | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
-
 before_script:
-  - echo $DOCKER_HUB_KEY | docker login -u $DOCKER_HUB_USERNAME --password-stdin
-
-#.build-image: &build-image
-#  - |-
-#    export DOCKER_REPO=$(echo "$DOCKER_REPO" | tr '[:upper:]' '[:lower:]')
-#    /kaniko/executor \
-#      --snapshotMode=redo \
-#      --use-new-run \
-#      --context "${CONTEXT}" \
-#      --dockerfile "${DOCKERFILE}" \
-#      --destination "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_REF_SLUG}" \
-#      --destination "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_SHORT_SHA}" \
-#      $(if [ ! -z "${CI_COMMIT_TAG}" ]; then echo "--destination ${DOCKER_REPO}:${CI_COMMIT_TAG}"; fi) \
-#      ${DOCKER_BUILD_ARGS}
-
-#.release-lazydl: &release-lazydl
-#  - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:lazydl
-#
-#.release-latest: &release-latest
-#  - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:latest
-#
-#.release-image: &release-image
-#    - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:${TAG_PREFIX}
-
+  - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$(echo -n ${DOCKER_HUB_USERNAME}:${DOCKER_HUB_KEY} | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
 
 .build-image: &build-image
-  - docker build -t "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_REF_SLUG}" -t "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_SHORT_SHA}" -f ${DOCKERFILE} ${CONTEXT}
-  - docker push "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_REF_SLUG}"
-  - docker push "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_SHORT_SHA}"
-
+  - |-
+    export DOCKER_REPO=$(echo "$DOCKER_REPO" | tr '[:upper:]' '[:lower:]')
+    /kaniko/executor \
+      --snapshotMode=redo \
+      --use-new-run \
+      --context "${CONTEXT}" \
+      --dockerfile "${DOCKERFILE}" \
+      --destination "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_REF_SLUG}" \
+      --destination "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_SHORT_SHA}" \
+      $(if [ ! -z "${CI_COMMIT_TAG}" ]; then echo "--destination ${DOCKER_REPO}:${CI_COMMIT_TAG}"; fi) \
+      ${DOCKER_BUILD_ARGS}
+#
 .release-lazydl: &release-lazydl
-  - docker tag runmymind/docker-android-sdk:${TAG_PREFIX}-master runmymind/docker-android-sdk:lazydl
-  - docker push runmymind/docker-android-sdk:lazydl
+  - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:lazydl
 
 .release-latest: &release-latest
-  - docker tag runmymind/docker-android-sdk:${TAG_PREFIX}-master runmymind/docker-android-sdk:latest
-  - docker push runmymind/docker-android-sdk:latest
+  - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:latest
 
 .release-image: &release-image
-  - docker pull runmymind/docker-android-sdk:${TAG_PREFIX}-master
-  - docker tag runmymind/docker-android-sdk:${TAG_PREFIX}-master runmymind/docker-android-sdk:${TAG_PREFIX}
-  - docker push runmymind/docker-android-sdk:${TAG_PREFIX}
+    - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:${TAG_PREFIX}
 
 build-alpine-lazydl:
   stage: build
