--- a/ubuntu/standalone/Dockerfile
+++ b/ubuntu/standalone/Dockerfile
@@ -12,26 +12,30 @@ ENV DEBIAN_FRONTEND noninteractive
 # Install required tools
 # Dependencies to execute Android builds
 
-RUN dpkg --add-architecture i386 && apt-get update -yqq && apt-get install -y \
+RUN dpkg --add-architecture i386
+#RUN dpkg --add-architecture i386 && apt-get update -yqq && apt-get install -y \
+#  libc6:i386 \
+#  libgcc1:i386 \
+#  libncurses5:i386 \
+#  libstdc++6:i386 \
+#  zlib1g:i386 \
+RUN apt-get update -yqq
+RUN apt-get install -y \
   curl \
   expect \
   git \
   make \
-  libc6:i386 \
-  libgcc1:i386 \
-  libncurses5:i386 \
-  libstdc++6:i386 \
-  zlib1g:i386 \
   openjdk-11-jdk \
   wget \
   unzip \
   vim \
   openssh-client \
   locales \
-  bsdtar \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* \
-  && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+  bsdtar
+
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/*
+RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 
 ENV LANG en_US.UTF-8
 
