--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,9 @@ image:
   entrypoint: [ "" ]
 
 stages:
-  - build
+  - build-lazydl
+  - build-standalone-1
+  - build-standalone-2
   - release
 
 before_script:
@@ -22,7 +24,7 @@ before_script:
       --destination "${DOCKER_REPO}:${TAG_PREFIX}-${CI_COMMIT_SHORT_SHA}" \
       $(if [ ! -z "${CI_COMMIT_TAG}" ]; then echo "--destination ${DOCKER_REPO}:${CI_COMMIT_TAG}"; fi) \
       ${DOCKER_BUILD_ARGS}
-#
+
 .release-lazydl: &release-lazydl
   - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:lazydl
 
@@ -33,7 +35,7 @@ before_script:
     - echo "FROM runmymind/docker-android-sdk:${TAG_PREFIX}-master" | /kaniko/executor --dockerfile /dev/stdin --destination runmymind/docker-android-sdk:${TAG_PREFIX}
 
 build-alpine-lazydl:
-  stage: build
+  stage: build-lazydl
   variables:
     CONTEXT: ${CI_PROJECT_DIR}
     DOCKERFILE: ${CI_PROJECT_DIR}/alpine/lazydl/Dockerfile
@@ -49,11 +51,13 @@ build-alpine-standalone:
     DOCKERFILE: ${CI_PROJECT_DIR}/alpine/standalone/Dockerfile
     DOCKER_REPO: runmymind/docker-android-sdk
     TAG_PREFIX: "alpine-standalone"
+  dependencies:
+    - build-lazydl
   script:
     - *build-image
 
 build-ubuntu-lazydl:
-  stage: build
+  stage: build-lazydl
   variables:
     CONTEXT: ${CI_PROJECT_DIR}
     DOCKERFILE: ${CI_PROJECT_DIR}/ubuntu/lazydl/Dockerfile
@@ -63,12 +67,14 @@ build-ubuntu-lazydl:
     - *build-image
 
 build-ubuntu-standalone:
-  stage: build
+  stage: build-standalone-1
   variables:
     CONTEXT: ${CI_PROJECT_DIR}
     DOCKERFILE: ${CI_PROJECT_DIR}/ubuntu/standalone/Dockerfile
     DOCKER_REPO: runmymind/docker-android-sdk
     TAG_PREFIX: "ubuntu-standalone"
+  dependencies:
+    - build-lazydl
   script:
     - *build-image
 
@@ -83,7 +89,7 @@ release-alpine-lazydl:
     - master
 
 release-alpine-standalone:
-  stage: release
+  stage: build-standalone-2
   variables:
     TAG_PREFIX: "alpine-standalone"
   script:
